--- a/angular/tpl/desktop/productchat.html
+++ b/angular/tpl/desktop/productchat.html
@@ -95,7 +95,7 @@
                         </div>
                     </div>
 
-                    <div class="messenger" scroll-to-bottom="chatData">
+                    <div class="messenger private-chat" scroll-to-bottom="chatData">
 
                         <div class="message-wrap" ng-repeat="message in chatData">
                             <div class="message" ng-class="{ 'me' : user.id == message.user_id , 'option-content' : message.isfile }">
@@ -115,10 +115,10 @@
                     <div class="sender">
                         <div class="msg-text">
                             <a class="small-btn"><i class="fa fa-smile-o"></i></a>
-                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendPrivateReplymessage()" id="emojionearea">
-                            <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="senduserchatattachment($files);"><i class="fa fa-paperclip"></i></a>
+                            <input type="text" placeholder="Send something..." ng-model="chatMessage.message" my-enter="sendReplymessage()">
+                            <a class="small-btn" ngf-select ngf-drop ngf-multiple="false" ngf-accept="'image/*'" ngf-capture="capture" ngf-allow-dir="allowDir" class="drop-box1" ngf-drop-available="dropAvailable" ngf-change="sendchatattachment($files);"><i class="fa fa-paperclip"></i></a>
                         </div>
-                        <div class="chat-btn" ng-click="sendPrivateReplymessage()"><i class="fa fa-send"></i></div>
+                        <div class="chat-btn" ng-click="sendReplymessage()"><i class="fa fa-send"></i></div>
                     </div>
                 </div>
             </div>
