user page contents removed

--- a/angular/index.html
+++ b/angular/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="utf-8" />
     <title>Collabro</title>
-    <!-- <base href="/project/Collabro/angular/"> -->
-    <base href="/collabro-v1/collabro-website/angular/" />
+    <base href="/project/Collabro/angular/">
+    <!-- <base href="/collabro-v1/collabro-website/angular/" /> -->
     <meta name="keywords" content="Collabro" />
     <meta name="description" content="Collabro" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
@@ -45,8 +45,7 @@
     <!-- // Main Css Files -->
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
-    <!-- Bootstrap -->
-    <script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.4/js/bootstrap.min.js"></script>
     <!-- Angular -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.7/angular-animate.js" type="text/javascript"></script>
