--- a/angular/index.html
+++ b/angular/index.html
@@ -33,6 +33,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick-theme.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ng-notify/0.8.0/ng-notify.min.css" />
     <link rel="stylesheet" href="https://cdn.rawgit.com/mervick/emojionearea/master/dist/emojionearea.min.css" />
+    <link rel="stylesheet" href="libs/angular/angular-ui-select/dist/select.min.css" type="text/css" />
     <!-- Slick slider -->
     <!-- //Libraries CSS Files -->
     <!-- Main Css Files -->
