--- a/angular/index.html
+++ b/angular/index.html
@@ -21,6 +21,9 @@
     <meta property="og:url" content="http://mswebsg.info/" />
     <meta property="og:image" content="http://mswebsg.info/development/img/sharelogo.png" />
     <link rel="icon" type="image/ico" href="img/favicon.png" />
+
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.1/css/bootstrap.css" type="text/css" />
     <!-- Font awesome CSS File -->
     <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- Font awesome CSS File -->
