--- a/angular/tpl/blocks/modals/broadcast.html
+++ b/angular/tpl/blocks/modals/broadcast.html
@@ -28,7 +28,9 @@
 
                         <div class="form-group mb-0">
                             <label class="control-label">Add Images</label>
+                            <span class="error error-text" ng-if="imageerror">{{imageerrormsg}}</span>
                         </div>
+                        <input name="images" type="hidden" ng-model="broadcastData.productfile" ng-required="broadcastData.images.length == 0" class="broad-images">
                         <div class="upload-container" ngf-select ngf-drop ngf-model-invalid="invalidFiles" ngf-model-options="modelOptionsObj" ngf-multiple="true" ngf-accept="'image/*'" ngf-capture="capture" ngf-drag-over-class="dragOverClassObj" ngf-max-files="6" ngf-ignore-invalid="ignoreInvalid"
                             ngf-allow-dir="allowDir" ngf-drop-available="dropAvailable" ngf-change="addImages($files);" ng-disabled="!broadcastData.category" ng-class="{'upload-btn-disabled': !broadcastData.category}" ng-if="!viewingThumb.file">
                             <div class="upload-inner">
@@ -92,13 +94,13 @@
 
                         <div class="form-group mb-0">
                             <label class="control-label">Title</label>
-                            <input type="text" class="form-control" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="broadcastData.title" required ng-disabled="!broadcastData.category" maxlength="100">
+                            <input type="text" class="form-control broad-title" name="title" placeholder="e.g. Title of the feed that you want to send to your friends" ng-model="broadcastData.title" required ng-disabled="!broadcastData.category" maxlength="100">
                             <span class="error error-text" ng-if="broadcasttitleerror">Enter Feed Title</span>
                         </div>
 
                         <div class="form-group mt-30 mb-0">
                             <label class="control-label">Description</label>
-                            <textarea class="form-control" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="broadcastData.description" required ng-disabled="!broadcastData.category" maxlength="1000"></textarea>
+                            <textarea class="form-control broad-description" rows="10" name="description" placeholder="This is where you can put a description of your feed." ng-model="broadcastData.description" required ng-disabled="!broadcastData.category" maxlength="1000"></textarea>
                             <span class="error error-text" ng-if="broadcastdescriptionerror">Enter Feed Description</span>
                         </div>
 
