delete function added

--- a/angular/tpl/desktop/dashboard.html
+++ b/angular/tpl/desktop/dashboard.html
@@ -381,7 +381,7 @@
                         <li>
                             <span>Total Earnings</span>
                             <div class="font-price">
-                                555
+                                $80,890
                             </div>
                         </li>
                         <li>
@@ -606,7 +606,7 @@
                                                         </a>
                                                         </div>
                                                         <div class="table-col table-single-option pr-5">
-                                                            <a><i class="fa fa-minus-circle"></i></a>
+                                                            <a ng-click="removeproduct(data)"><i class="fa fa-minus-circle"></i></a>
                                                         </div>
                                                     </div>
                                                 </div>                                                
